--- a/style.css
+++ b/style.css
@@ -1,48 +1,190 @@
-.flex{
+
+
+body {
+    height: 100vh;
+    margin: 0;
+    font-family: sans-serif;
+    background-color: #111;
+}
+
+.border {
+    border: 1px solid;
+}
+
+.flex {
     display: flex;
 }
 
-nav{
+a {
+    color: white;
+    text-decoration: none;
+}
+.text {
+    color: white;
+}
+.nav-content ul {
+    gap: 40px;
+    list-style: none;
+    margin-right: 5rem;
+    padding: 0;
+}
+
+.nav-content {
+    align-items: start;
+    width: 100%;
+}
+
+.main-nav a {
+    color: white;
+    text-decoration: none;
+}
+
+.main-nav {
     align-items: center;
-    justify-content: space-between;
-    padding: 15px 30px;
+    justify-content: center;
+    padding-left: 50px;
     border-radius: 5px;
     color: white;
-    background-color: rgb(2, 2, 77);
+    background-color: black;
+    height: 5rem;
+
+}
+
+.logo {
+    width: 25%;
 }
 
 
-.nav-pages ul {
-    gap: 25px;
-    list-style: none;
-    margin-right: 20px;
+.btn-auth {
+    margin-left: 5rem;
+    gap: 1.5rem;
+    padding-right: 3rem;
     
 }
-.navbar {
-    align-items: center;
-}
-.navbar a {
-color: white;
-text-decoration: none;
-}
 
-.btn button{
-background-color: rgba(10, 10, 155, 0.519);
-color: white;
-border: 1px solid black;
-border-radius: 4px;
-height: 2.5rem;
+.btn button {
+    background: linear-gradient(to right, #00cfff, #b300ff);
+    color: white;
+    border: 1px solid black;
+    border-radius: 4px;
+    height: 2rem;
+    width: 10rem;
+    padding: 0 1rem;
+    margin-top: 0.5rem;
+    
 }
-.partie1{
-    border: 1px solid;
-}
-.partie2{
-    border: 1px solid;
-}
-.partie3{
-    border: 1px solid;
+.btn-auth button {
+    background: linear-gradient(to right, #00cfff, #b300ff);
+    color: white;
+    border: 1px solid black;
+    border-radius: 4px;
+    height: 2rem;
+    width:6rem;
+    padding: 0 1rem;
 }
 footer {
-border: 1px solid;
+    background-color: black;
+    
+    color: white;
+    padding: 2rem;
+}
+footer ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    margin-bottom: 1rem;
+}
+footer ul li {
+    margin-bottom: 1rem;
+}
+.footer-column {
+    width: 200px;
+    gap: 10rem;
 
 }
+.footer-top {
+    display: flex;
+    gap: 9rem;
+}
+
+.footer-about {
+    padding-left: 2rem;
+}
+
+.footer-description {
+    width: 30rem;
+}
+
+.footer-title {
+    color: white;
+}
+
+.footer-middle {
+    justify-content: space-around;
+    margin-top: 2rem;
+    border-top: 0.5px solid white;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 1rem;
+    border-top: 1px solid white;
+    margin-top: 2rem;
+}
+.footer-bottom-text{
+    gap: 5rem;
+    padding-top: 1rem;
+    display: flex;
+}
+.footer-text{
+display: flex;
+gap: 90px;
+}
+.icons{
+    width: 24px;
+    height: 24px;
+    background-color: black;
+    border-radius: 51%;
+}
+
+.contact-item {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+.hero {
+   
+    background: url("./assets/Arena2.png");
+    background-size: cover;
+    background-position: center;
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 40vh;
+
+}
+
+
+
+.hero-content {
+    color: white;
+    text-align: center;
+    position: relative;
+    top: 40%;
+    transform: translateY(-40%);
+}
+
+.hero-content h1 {
+    font-size: 6rem;
+    margin-bottom: 1rem;
+    
+}
+
+.hero-content h5 {
+    font-size: 1.2rem;
+    font-weight: 300;
+}
+
+
