--- a/style.css
+++ b/style.css
@@ -256,40 +256,62 @@ margin: 8rem 0;
     height: 40vh;
     gap: 1rem;
 }
-.games-card{
+.games-card-row1{
     justify-content: center;
     align-items: center;
-    padding: 9rem 0;
+    padding: 0 0 5rem;
     color: white;
     display: flex;
     flex-direction: row;
-    gap: 10rem;
+    gap: 3rem;
+    
+}
+.games-card-2{
+    justify-content: center;
+    align-items: center;
+    padding-bottom:5rem;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
     
 }
 
 .card-row1{
     position: relative;
-    width: 300px;
+    width: 250px;
     border-radius: 8px;
     overflow: hidden;
+    height: 350px;
+    border: 0.5px solid;
+    border-radius: 10px;
     
   }
   .card-row1 img {
     width: 100%;
+    height: 100%;      
+    object-fit: cover;     
     display: block;
-    height: auto;
-  }
+}
+
   .card-text {
     position: absolute;
     left: 16px;
-    bottom: 16px;
+    bottom: 10px;
     color: white;
+    padding-top: 10px;
   }
+  
   .card-text h5{
     margin: 4px 0;
     font-size: 1rem;
-    font-weight: bold;
+   
   }
   .card-text h6{
     color: #00cfff;
+    margin-top: 12px;
+  text-shadow: 1px 1px 10px black; 
+}
+  .card-text p{
+    opacity: 0.5;
   }
