--- a/style.css
+++ b/style.css
@@ -385,7 +385,7 @@ padding-left: 10px;
     padding-bottom: 5rem;   
 }
 .card-bl{
-   border: 1px solid #00cfff;
+    border: 1px solid #00cfff;
     border-radius: 10px;
     height: 55vh;
     width: 20vw;
@@ -440,10 +440,67 @@ padding-right: 10px;
     flex-direction: row;
     justify-content: space-between;
     margin: 30px 10px;
-    border: 0.5px solid #00cfff;
+    border: 1px solid #00cfff;
     padding: 10px;
     border-radius: 7px;
 }
+/* TEAMS */
+.cards-tm{ /*s*/
+    height: 500px;
+    display: flex;
+    align-items: center;
+    gap: 50px; 
+    margin-left: 10%;
+    padding-bottom: 2rem;   
+}
+.card-tm{
+    border: 1px solid #00cfff;
+    border-radius: 10px;
+    height: 55vh;
+    width: 18vw;
+    background-color: #02052b; 
+}
 
+.imag-tm img{
+    height: 200px;
+    width:100%;
+    border-bottom:4px solid #00cfff;
+    border-radius: 9px;
+    object-fit:cover;
 
+}
+.card-tm > p:first-of-type{
+   color: white;
+   font-weight: bold;
+    text-align: center;
+} 
+.card-tm-txt{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
 
+}
+.membre,.wins{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+.nm,.wn{
+    display: flex;
+    justify-content: center;
+    height: 3vh;
+    width: 8vw;
+    align-items: center;
+    gap: 5px;
+}
+.view{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 30px 10px;
+    padding-top: 20px;
+    border: 1px solid rgb(90, 5, 90);
+    padding: 10px;
+    border-radius: 7px;
+}
